color classifier optimizied

--- a/Vehicle-Detection.ipynb
+++ b/Vehicle-Detection.ipynb
@@ -541,20 +541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "spatial = 12\n",
-    "cspace = 'LUV'\n",
-    "histbin = 32"
+    "spatial = 12    # similar accuracy to 16, but half the feature count\n",
+    "cspace = 'LUV'  # clearly the best color space\n",
+    "histbin = 32    # 256 was had a higher test accuracy, but I'm afraid that may over-fit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -574,7 +574,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "spatial:  12 cspace:  LUV accuracy:  0.956644144144 feature_count:  528 histbin 32\n"
+      "spatial:  12 cspace:  LUV accuracy:  0.956925675676 feature_count:  528 histbin 32\n"
      ]
     }
    ],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
